--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										my masters degree year two, in mobile and distributed computing from university of Franche-Comté in France.</p>
 
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="https://jadnassar.github.io/images/pic01.jpg" alt="" /></span>
 								</div>
 							</section>
 
