--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
 										<header class="major">
 											<h2>Jad NASSAR</h2>
 										</header>
-										<p>I'm a PhD student working under the supervision of <a target="_blank" href="http://researchers.lille.inria.fr/~mitton/"><b>Nathalie MITTON</b></a>, 
+								
+										<p>I am an assistant professor in Computer Science at HEI – Yncréa HdF, Computer Science & Maths department.
+ Prior to that, I got my PhD in Computer Science entitled Ubiquitous Networks for Smart Grids from the University of Lille in October 2018 under the supervision of of <a target="_blank" href="http://researchers.lille.inria.fr/~mitton/"><b>Nathalie MITTON</b></a>, 
 										in the <a target="_blank" href="http://team.inria.fr/fun/">FUN team</a> at <a target="_blank" href="http://www.inria.fr/en/centre/lille">Inria Lille - Nord Europe</a>
 										and <a target="_blank" href="https://nicolasgouvy.fr"><b>Nicolas GOUVY</b></a> at 
-										<a target="_blank" href="http://en.hei.fr/">HEI, Yncréa Hauts-de-France.</a><br> 
-										I received my engineering diploma in telecommunications and networking in 2015 from Antonine university in Lebanon, in parallel with 
-										my masters degree year two, in mobile and distributed computing from university of Franche-Comté in France.</p>
+										<a target="_blank" href="http://en.hei.fr/">HEI, Yncréa Hauts-de-France.</a><br>.
+
+I also previously received my engineering diploma in telecommunications and networking in 2015 from Antonine university in Lebanon, in parallel with my master’s degree year two, in mobile and distributed computing from university of Franche-Comté in France.</p>
 
 									</div>
 									<span class="image"><img src="https://jadnassar.github.io/images/pic01.jpg" alt="" /></span>
