--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ June 25, 2018 · Los Angeles, California, USA</h5></I></a>
 								<dt>Phone</dt>
 								<dd>+33 (0) 6 46 70 88 96</dd>
 								<dt>Email</dt>
-								<dd><a href="mailto:Jad.nassar@yncrea.fr">Jad.nassar@yncrea.fr</a></dd>
+								<dd><a href="mailto:Jad.nassar@junia.com">Jad.nassar@junia.com</a></dd>
 
 							</dl>
 							<ul class="icons">
